# authgate-kernel

./: .gitignore  ARCHITECTURE.md  AXIOMATIC_FOUNDATION.md  BRANCHES.md  CHANGELOG.md  COMPARATIVE_EVALUATION.md  COMPLIANCE.md  CONTRIBUTING.md  DEATH_SCENARIOS.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  Dockerfile  EXTERNAL_REVIEW_PACKAGE.md  FEATURE_FREEZE.md  FINDINGS.md  FIRST_ADOPTER.md  GUIDE.md  INCIDENT_RESPONSE.md  INFRASTRUCTURE_PLAN.md  MASTER_PLAN.md  NON_GOALS.md  PLUGIN_MODEL.md  POSITIONING.md  PRIOR_ART.md  README.md  SECURITY.md  SEMANTICS.md  SILICON_VALLEY.md  TCB_DISCIPLINE.md  TEAM.md  THREAT_DEFENSE_PAIRS.md  THREAT_MODEL.md  TODO.md  evoloution.md  pyproject.toml
attack_harness/: ATTACK_MATRIX.md  README.md  TCB_MAPPING.md  attack_tree_coverage.py  canonicalization_attacks.py  differential_fuzzer.py  differential_tests.py  mutation_attacks.py  sequence_attacks.py  wire_attacks.py
benchmarks/: comprehensive_bench.py  python_verify_bench.py
examples/: agi_agent_loop.py  attack_scenarios.py  callgate_demo.py  multi_agent.py  openai_integration.py
formal/: COVERAGE.md  FreedomKernel.lean  INCOMPLETENESS.md  INVARIANT_LATTICE.md  MC_AuthGateV3.cfg  MC_AuthGateV3.tla  README.md  THREAT_MODEL.md  TLC_SETUP.md  authgate_v3.tla
freedom-kernel/: Cargo.toml  TCB_CONSTRAINTS.md  deny.toml
research/: PHD_FRAMING.md  capability-model-extension.md  future-threats.md  proof-versioning.md
spec/: audit_entry.schema.json  canonical_action.schema.json  gate_result.schema.json
tests/: test_adapters.py  test_adapters_callgate_integration.py  test_adversarial.py  test_adversarial_redteam.py  test_anti_capture.py  test_api.py  test_army.py  test_audit.py  test_audit_hardening.py  test_authority_escalation.py  test_authority_source.py  test_c1_identity_binding.py  test_call_gate.py  test_cli.py  test_coercion.py  test_coercion_primitives.py  test_core.py  (+38 more)
(+205 files in other folders)
