[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authgate"
version = "1.0.0"
description = "Capability-security kernel for agent runtimes — typed authority verification with formal invariants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Contributors" },
]
keywords = ["capability-security", "agent-runtimes", "formal-verification", "authority-verification", "rust", "formal-methods"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/Aliipou/authgate"
Repository = "https://github.com/Aliipou/authgate"
Issues = "https://github.com/Aliipou/authgate/issues"

[project.scripts]
authgate-server = "authgate.api.app:app"
authgate-cli = "authgate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/authgate"]
include = ["src/authgate/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false
ignore_missing_imports = true
